--- a/.github/workflows/scrape_and_update.yml
+++ b/.github/workflows/scrape_and_update.yml
@@ -25,18 +25,15 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install requests beautifulsoup4
-
-    - name: Run First Python script
-      run: python scrape_and_update.py >> updated_file.m3u8
-
-    - name: Run Second Python script
-      run: python mr_scrape.py >> updated_file.m3u8
+    - name: Run Python script
+      run: python scrape_and_update.py
 
     - name: Commit and push changes
       run: |
           git diff
           git config --global user.email "actions@github.com"
           git config --global user.name "actions-user"
+          git add updated_file.m3u8
           git commit -am "Update m3u8 file"
           git pull --rebase origin main
           git push
